# typed-rest

./: README.md  client.py  main.py  pyproject.toml  typed_rest.py
.github/workflows/: publish.yaml
benchmark/: README.md  bench.py  pyproject.toml
docs/: README.md  docs.md  pydoc-markdown.yml  pyproject.toml
examples/pyscript/: main.py  my_api.py  pyproject.toml
examples/pyscript/static/: index.html  main.py  my_api.py  pyscript.toml  typed_rest
examples/requests/: client.py  my_api.py  pyproject.toml
examples/simple/: client_async.py  client_sync.py  main.py  pyproject.toml
examples/upgraded/: README.md  pyproject.toml
examples/webapp/: main.py  my_api.py  pyproject.toml
examples/webapp/static/: main.py  pyscript.toml  rest_rpc
src/rest_rpc/: __init__.py
src/typed_rest/: __init__.py
tests/: README.md  conftest.py  pyproject.toml  test_api_client.py  test_api_client_aiohttp.py  test_api_client_async_custom_transport.py  test_api_client_custom.py  test_api_client_custom_transport.py  test_api_client_custom_with_aiohttp.py  test_api_client_custom_with_testclient.py  test_api_client_engines_sync.py  test_api_client_errors.py  test_api_client_httpx.py  test_api_client_mapping.py  test_api_client_requests.py  test_api_client_urllib3.py  test_api_definition.py  test_api_implementation.py  test_client_validation_error.py  test_custom_transport_headers_body_query.py  test_header_alias.py  test_headers_basic.py  test_headers_underscore_conversion.py  test_missing_header_422.py  test_mixed_params_all_kinds.py
