[project]
name = "typed-rest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ruben Felgenhauer", email = "Ruben.Felgenhauer@posteo.de" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[project.scripts]
typed-rest = "typed_rest:main"

[project.optional-dependencies]
fastapi = [
    "fastapi[standard]>=0.128.0",
]
requests = [
    "requests>=2.32.5",
]
aiohttp = [
    "aiohttp>=3.13.3",
]
httpx = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "examples/*",
    "tests",
]
