[project]
name = "typed-rest-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "typed-rest[fastapi,requests,aiohttp,httpx,urllib3]>=0.1.0",
]
[tool.uv.sources]
typed-rest = { workspace = true }

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:websockets\\.legacy is deprecated:DeprecationWarning",
    "ignore:websockets\\.server\\.WebSocketServerProtocol is deprecated:DeprecationWarning",
]
