[project]
name = "rest-rpc-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "rest-rpc[fastapi,requests,aiohttp,httpx,urllib3]>=0.1.0",
]
[tool.uv.sources]
rest-rpc = { workspace = true }

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:websockets\\.legacy is deprecated:DeprecationWarning",
    "ignore:websockets\\.server\\.WebSocketServerProtocol is deprecated:DeprecationWarning",
]
